Use correct PHP syntax, enable flavors

--- a/www/webcalendar/Makefile
+++ b/www/webcalendar/Makefile
@@ -1,6 +1,7 @@
 # $FreeBSD: head/www/webcalendar/Makefile 401553 2015-11-13 22:13:24Z antoine $
 
 PORTNAME=	WebCalendar
+PKGNAMESUFFIX=	${PHP_PKGNAMESUFFIX}
 PORTVERSION=	1.3.0
 DISTVERSIONPREFIX=	v
 DISTNAME=	webcalendar-${DISTVERSIONPREFIX}${DISTVERSION}${DISTVERSIONSUFFIX}
@@ -21,11 +22,11 @@ WANT_PHP_WEB=	yes
 NO_BUILD=	yes
 NO_ARCH=	yes
 
-USES=		cpe
+USES=		cpe php:flavors
 CPE_VENDOR=	craig_knudsen
 WWWDIR=		${PREFIX}/www/${PORTNAME:tl}
 DOCSDIR=	${PREFIX}/share/doc/${PORTNAME:tl}
-DEFAULT_VERSIONS+=	php=7
+DEFAULT_VERSIONS+=	php
 WITH_PHP_CGI?=	/cgi-bin/php
 SUB_LIST+=	PHPCGI=${WITH_PHP_CGI}
 PLIST_SUB+=	WWWOWN=${WWWOWN} WWWGRP=${WWWGRP}
