--- a/www/webcalendar/Makefile
+++ b/www/webcalendar/Makefile
@@ -1,9 +1,9 @@
 # $FreeBSD: head/www/webcalendar/Makefile 401553 2015-11-13 22:13:24Z antoine $
 
 PORTNAME=	WebCalendar
-PKGNAMESUFFIX=	${PHP_PKGNAMESUFFIX}
-PORTVERSION=	1.3.0
+DISTVERSION=	1.3.0-50
 DISTVERSIONPREFIX=	v
+DISTVERSIONSUFFIX=	-gf2d92600
 DISTNAME=	webcalendar-${DISTVERSIONPREFIX}${DISTVERSION}${DISTVERSIONSUFFIX}
 CATEGORIES=	www
 
@@ -22,7 +22,7 @@ USE_PHP=	pcre session
 NO_BUILD=	yes
 NO_ARCH=	yes
 
-USES=		cpe php:web,flavors
+USES=		cpe php:web
 CPE_VENDOR=	craig_knudsen
 WWWDIR=		${PREFIX}/www/${PORTNAME:tl}
 DOCSDIR=	${PREFIX}/share/doc/${PORTNAME:tl}
