Update From Upstream

--- a/www/webcalendar/Makefile
+++ b/www/webcalendar/Makefile
@@ -1,16 +1,14 @@
-# $FreeBSD: head/www/webcalendar/Makefile 401553 2015-11-13 22:13:24Z antoine $
-
 PORTNAME=	WebCalendar
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.3.0-50
-DISTVERSIONSUFFIX=	-gf2d92600
+DISTVERSION=	1.9.1-40
+DISTVERSIONSUFFIX=	-g6183409f
 CATEGORIES=	www
 PKGNAMESUFFIX=	${PHP_PKGNAMESUFFIX}
 DISTNAME=	webcalendar-${DISTVERSIONPREFIX}${DISTVERSION}${DISTVERSIONSUFFIX}
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Web-based calendar application
-
+WWW=	http://www.k5n.us/webcalendar.php
 LICENSE=	GPLv2
 
 USES=		cpe php:web,flavors
@@ -35,7 +33,7 @@ PLIST_SUB+=	WWWOWN=${WWWOWN} WWWGRP=${WWWGRP}
 
 PORTDOCS=	WebCalendar-SysAdmin.html newwin.gif
 
-OPTIONS_DEFINE=		APACHE LDAP GRADIENTBG REMINDERS PALM DOCS
+OPTIONS_DEFINE=		APACHE LDAP GRADIENTBG REMINDERS PALM DOCS EXAMPLES
 OPTIONS_DEFAULT=	MYSQL REMINDERS
 OPTIONS_MULTI=		DB
 OPTIONS_MULTI_DB=	MYSQL PGSQL SQLITE MSSQL DBASE ODBC ORACLE
@@ -84,6 +82,9 @@ SUB_LIST+=	HASHMARK=
 .else
 SUB_LIST+=	HASHMARK=\#
 .endif
+
+post-extract:
+	@${RM} -rf ${WRKSRC}/.github ${WRKSRC}/docker
 
 do-install:
 	@${MKDIR} ${STAGEDIR}${WWWDIR}
